reconfigure cors config